# qsp-codegen

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml
cpp/: CMakeLists.txt
cpp/cmake/: QspSimCoreDeps.cmake  qsp_sim_coreConfig.cmake
cpp/include/qsp_sim_core/: CVODEBase.h  model_hooks.h  trajectory_writer.h
cpp/src/: CVODEBase.cpp  ParamBase.cpp  default_hooks.cpp  qsp_sim_main.cpp
paper/: paper.bib  paper.md
paper/benchmark/: .gitignore  README.md  bench_matlab.m  bench_matlab_cold.m  build_model.m  drug_metadata.yaml  run_benchmark.py  scenario.yaml
src/qsp_codegen/: __init__.py  cmake.py  codegen.py  refresh_param_xml.py  sync_checks.py  verify.py
src/qsp_codegen/parity/: __init__.py  compare_trajectories.py  export_matlab_trajectories.m  yaml_read.m
tests/: test_events.py  test_function_defs.py  test_mathml_ops.py  test_parity_smoke.py  test_rate_rules.py  test_smoke.py  test_validate_generated.py
